--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "multer": "^2.0.1",
